overlays/local/argocd-monorepo-controller/resources.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/name: argocd-monorepo-controller-metrics
    app.kubernetes.io/part-of: argocd
  name: argocd-monorepo-controller-metrics
spec:
  ports:
  - name: metrics
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app.kubernetes.io/name: argocd-monorepo-controller
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: monorepo-repo-server
    app.kubernetes.io/name: argocd-monorepo-repo-server
    app.kubernetes.io/part-of: argocd
  name: argocd-monorepo-repo-server
spec:
  ports:
  - name: server
    port: 8091
    protocol: TCP
    targetPort: 8091
  - name: metrics
    port: 8094
    protocol: TCP
    targetPort: 8094
  selector:
    app.kubernetes.io/name: argocd-monorepo-repo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: monorepo-controller
    app.kubernetes.io/name: argocd-monorepo-controller
    app.kubernetes.io/part-of: argocd
  name: argocd-monorepo-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-monorepo-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-monorepo-controller
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: argocd-monorepo-controller
              topologyKey: kubernetes.io/hostname
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/part-of: argocd
              topologyKey: kubernetes.io/hostname
            weight: 5
      containers:
      - args:
        - /usr/local/bin/argocd-monorepo-controller
        image: quay.io/argoprojlabs/argocd-monorepo-controller:latest
        imagePullPolicy: Always
        name: argocd-monorepo-controller
        ports:
        - containerPort: 8090
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8090
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /app/config/controller/tls
          name: argocd-repo-server-tls
        - mountPath: /home/argocd
          name: argocd-home
        - mountPath: /home/argocd/params
          name: argocd-cmd-params-cm
        - mountPath: /tmp
          name: argocd-monorepo-controller-tmp
        workingDir: /home/argocd
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: argocd-monorepo-controller
      volumes:
      - emptyDir: {}
        name: argocd-home
      - emptyDir: {}
        name: argocd-monorepo-controller-tmp
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
      - configMap:
          items:
          - key: controller.profile.enabled
            path: profiler.enabled
          name: argocd-cmd-params-cm
          optional: true
        name: argocd-cmd-params-cm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: monorepo-repo-server
    app.kubernetes.io/name: argocd-monorepo-repo-server
    app.kubernetes.io/part-of: argocd
  name: argocd-monorepo-repo-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-monorepo-repo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-monorepo-repo-server
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: argocd-monorepo-repo-server
              topologyKey: kubernetes.io/hostname
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/part-of: argocd
              topologyKey: kubernetes.io/hostname
            weight: 5
      automountServiceAccountToken: false
      containers:
      - args:
        - /usr/local/bin/argocd-monorepo-repo-server
        image: quay.io/argoprojlabs/argocd-monorepo-controller:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz?full=true
            port: 8094
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        name: argocd-monorepo-repo-server
        ports:
        - containerPort: 8091
        - containerPort: 8094
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8094
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        - mountPath: /app/config/tls
          name: tls-certs
        - mountPath: /app/config/gpg/source
          name: gpg-keys
        - mountPath: /app/config/gpg/keys
          name: gpg-keyring
        - mountPath: /app/config/reposerver/tls
          name: argocd-repo-server-tls
        - mountPath: /tmp
          name: tmp
        - mountPath: /helm-working-dir
          name: helm-working-dir
        - mountPath: /home/argocd/cmp-server/plugins
          name: plugins
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: argocd-monorepo-repo-server
      volumes:
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
      - configMap:
          name: argocd-tls-certs-cm
        name: tls-certs
      - configMap:
          name: argocd-gpg-keys-cm
        name: gpg-keys
      - emptyDir: {}
        name: gpg-keyring
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: helm-working-dir
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
      - emptyDir: {}
        name: var-files
      - emptyDir: {}
        name: plugins
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: monorepo-controller
    app.kubernetes.io/name: argocd-monorepo-controller
    app.kubernetes.io/part-of: argocd
  name: argocd-monorepo-controller-network-policy
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8090
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-monorepo-controller
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: monorepo-repo-server
    app.kubernetes.io/name: argocd-monorepo-repo-server
    app.kubernetes.io/part-of: argocd
  name: argocd-monorepo-repo-server-network-policy
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-monorepo-controller
    ports:
    - port: 8091
      protocol: TCP
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8094
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-monorepo-repo-server
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-monorepo-repo-server-redis-network-policy
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-monorepo-repo-server
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  policyTypes:
  - Ingress
